force-app/main/default/objects/RWCCS_Attachment__c/RWCCS_Attachment__c.object-meta.xml
<CustomObject>
    <label>RWCCS Attachment</label>
    <nameField>
        <displayFormat>RWCCS-{00000000}</displayFormat>
        <label>RWCCS Attachment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWCCS Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>