force-app/main/default/objects/RWCCS_Attachment__c/fields/Is_Revision__c.field-meta.xml
<CustomField>
    <fullName>Is_Revision__c</fullName>
    <label>Is Revision</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>