force-app/main/default/objects/RWCCS_Attachment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benefits Summary</fullName>
            </value>
            <value>
                <fullName>Bid/Tender</fullName>
            </value>
            <value>
                <fullName>Champion Letter</fullName>
            </value>
            <value>
                <fullName>Contract/Agreement</fullName>
            </value>
            <value>
                <fullName>Conversation/Interview Notes</fullName>
            </value>
            <value>
                <fullName>Cost Benefit</fullName>
            </value>
            <value>
                <fullName>Customer Form</fullName>
            </value>
            <value>
                <fullName>Enrollment Documents</fullName>
            </value>
            <value>
                <fullName>Key Player Letter</fullName>
            </value>
            <value>
                <fullName>Negotiation Addendum</fullName>
            </value>
            <value>
                <fullName>Negotiation Worksheet</fullName>
            </value>
            <value>
                <fullName>Program Agreement Redlines</fullName>
            </value>
            <value>
                <fullName>RWSS Contracts</fullName>
            </value>
            <value>
                <fullName>Sequence of Events</fullName>
            </value>
            <value>
                <fullName>Shipping/Routing Update</fullName>
            </value>
            <value>
                <fullName>Solution Development Prompter</fullName>
            </value>
            <value>
                <fullName>Sphere of Influence</fullName>
            </value>
            <value>
                <fullName>Success Metrics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>