force-app/main/default/objects/RWCCS_Attachment__c/validationRules/Is_Revision_Required_for_Contract_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Revision_Required_for_Contract_Types</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   OR(ISPICKVAL( Type__c , &quot;Bid/Tender&quot;),
      ISPICKVAL( Type__c , &quot;Contract/Agreement&quot;),
      ISPICKVAL( Type__c , &quot;Customer Form&quot;),
      ISPICKVAL( Type__c , &quot;Program Agreement Redlines&quot;),
      ISPICKVAL( Type__c , &quot;Shipping/Routing Update&quot;)),
   ISBLANK(TEXT(Is_Revision__c))
    )</errorConditionFormula>
    <errorDisplayField>Is_Revision__c</errorDisplayField>
    <errorMessage>For this attachment type you must indicate if it is a new document or revision from the original previously attached.</errorMessage>
</ValidationRule>